# smlp

./: .gitignore  .gitmodules  AUTHORS  ChangeLog  INSTALL.SLES12SP4  Makefile  Marabou-Abstract_Solvers.md  NOTICE  README  README.md  Set1_0.2414_experiments.txt  Set1_0.2414_scatter_plot_predicted.html  Set1_0.2414_stable_witnesses.csv  Set1_0.2414_stable_witnesses.html  Set1_0.2414_witnesses.csv  Set1_0.2414_witnesses.html  Set1_0.5701_experiments.txt  Set1_0.5701_scatter_plot_predicted.html  Set1_0.5701_witnesses.csv  Set1_0.66_experiments.txt  Set1_0.66_scatter_plot_predicted.html  Set1_0.66_witnesses.csv  Set1_0.66_witnesses.html  Set1_0.7267_experiments.txt  Set1_0.7267_scatter_plot_predicted.html  Set1_0.7267_stable_witnesses.csv  Set1_0.7267_stable_witnesses.html  Set1_0.7267_witnesses.csv  Set1_0.7267_witnesses.html  Set2_0.0798_experiments.txt  Set2_0.0798_scatter_plot_predicted.html  Set2_0.083_experiments.txt  Set2_0.083_scatter_plot_predicted.html  Set2_0.2244_experiments.txt  Set2_0.2244_scatter_plot_predicted.html  Set2_0.2244_witnesses.csv  Set2_0.3024_experiments.txt  Set2_0.3024_scatter_plot_predicted.html  Set2_0.3024_witnesses.csv  Set2_0.313_experiments.txt  (+32 more)
additional_files/: MarabouCore.cpp
additional_files/benchmark/: benchmark.py  benchmark_functions.py
bench/: README_bench
benchmarks-fmcad2020/: h1_iter_tx.csv.bz2  h1_tx.csv.bz2  index.html
benchmarks-intel/: m2_tx.csv.bz2  mu_tx.csv.bz2  rx-rank0-ch0-byte-7.smt2  s2_tx.csv.bz2
doc/: .gitignore  Makefile  latex.mk
doc/doc/: bib.bib  doc.tex  smlp_toy_basic_pred_unlabeled.csv
doc/spec/: Makefile  spec.tex
experiment_outputs/Set1/: function.txt  smlp_toy_basic.csv
experiment_outputs/Set10/: function.txt  functions.txt  smlp_toy_basic.csv  smlp_toy_basic.spec
experiment_outputs/Set2/: bounds.csv  smlp_toy_basic.csv  smlp_toy_basic.spec
experiment_outputs/Set21/: function.txt  smlp_toy_basic.csv  smlp_toy_basic.spec
experiment_outputs/Set3/: function.txt  smlp_toy_basic.csv  smlp_toy_basic.spec
experiment_outputs/Set4/: function.txt  smlp_toy_basic.csv  smlp_toy_basic.spec
experiment_outputs/Set5/: function.txt  smlp_toy_basic.csv  smlp_toy_basic.spec
experiment_outputs/Set6/: function.txt  smlp_toy_basic.csv  smlp_toy_basic.spec
experiment_outputs/Set7/: function.txt  smlp_toy_basic.csv  smlp_toy_basic.spec
experiment_outputs/Set8/: function.txt  smlp_toy_basic.csv  smlp_toy_basic.spec
experiment_outputs/Set9/: function.txt  smlp_toy_basic.csv  smlp_toy_basic.spec
ext/: Makefile
include/smlp/: cbuf.h  check-data-lib.h  common.h  response.h  spec.h  spec.hh  table.h
regr_smlp/: smlp_regr.csv  smlp_regr.csv~  smlp_regr.py  smlp_tests.txt
regr_smlp/code/: .nfs0000000005a056ed00000167  .nfs0000000005a0dbf300000157  csv_comparator.py  outdir_cleanup12.py  smlp_regr.csv  smlp_regr.py
regr_smlp/data/: smlp_toy_basic.csv  smlp_toy_cls_metasymbol_colnames_mult.csv  smlp_toy_ctg_num_resp.csv  smlp_toy_mult_discr.csv  smlp_toy_num_metasymbol_mult.csv  smlp_toy_num_metasymbol_mult_pred_labeled.csv  smlp_toy_num_metasymbol_mult_reg.csv  smlp_toy_num_metasymbol_mult_reg_pred_labeled.csv  smlp_toy_num_pred_labeled.csv  smlp_toy_num_resp_metasymbol_colnames_mult.csv  smlp_toy_num_resp_metasymbol_colnames_mult_new.csv  (+14 more)
smlp/: __init__.py  comm.py  solverpool.py  term.py
src/: MarabouCommon.py  MarabouSolver.py  bounds-csv.py  build.mk  cbuf.c  check-data-lib.c  check-data.c  checkdata.py  common.py  dataset.mk  defaults.mk  eval.py  felix.py  filter-trace-flt  filter-trace.awk  filter-trace.sh  logs_common.py  mkspec.py  mrc-ch.mk  mrc-params.mk  mrc-prep-dirs.sh  mrc-rank.mk  mrc.mk  nn_predict-grid.py  prep-shai-area-adj3.py  prove-nn.py  response.c  run_smlp.py  scripts.mk  shai-prep-cmd.cc  shai-prep.cc  shai-preproc-zk.r  shai-preproc.py  shaiprep.py  smlp_optimize.py  smlp_train.py  solvepar.py  spec.c  spec.cc  split-categorical2.py  (+3 more)
toy_out_dir/: abc_smlp_toy_basic.txt  abc_smlp_toy_basic_data_bounds.json  abc_smlp_toy_basic_dt_sklearn_model_complete.pkl  abc_smlp_toy_basic_dt_sklearn_z_tree_rules.txt  abc_smlp_toy_basic_features_scaler.pkl  abc_smlp_toy_basic_labeled_prediction_precisions.csv  abc_smlp_toy_basic_labeled_predictions_summary.csv  abc_smlp_toy_basic_model_features_dict.json  abc_smlp_toy_basic_optimization_progress.csv  abc_smlp_toy_basic_optimization_progress.json  abc_smlp_toy_basic_optimization_results.csv  abc_smlp_toy_basic_optimization_results.json  abc_smlp_toy_basic_poly_sklearn_formula.txt  abc_smlp_toy_basic_poly_sklearn_model_complete.pkl  abc_smlp_toy_basic_responses_scaler.pkl  abc_smlp_toy_basic_rf_sklearn_model_complete.pkl  abc_smlp_toy_basic_rf_sklearn_z_tree_rules.txt  abc_smlp_toy_basic_test_prediction_precisions.csv  abc_smlp_toy_basic_test_predictions_summary.csv  abc_smlp_toy_basic_trace.csv  abc_smlp_toy_basic_training_prediction_precisions.csv  abc_smlp_toy_basic_training_predictions_summary.csv  abc_smlp_toy_basic_z_smlp_full_model_term.json  abc_smlp_toy_basic_z_smlp_model_term.json
utils/: Makefile  README.poly  common.hh  denorm.py  frac_to_float.py  poly.cc  poly.py
utils/poly/: .gitignore  CHANGELOG  Makefile  README  README.md  alex.py  meson.build  meson_options.txt  quickinstall.sh  setup.py.in  solver-sample.py
utils/poly/include/: config.h.meson  sexpr-detail.hh  smlp  smtlib2-parser.hh
utils/poly/include/es/: sexpr-detail.hh  sexpr.hh  smtlib2-parser.hh
utils/poly/python/: __init__.py
utils/poly/python/smlp/: __init__.py
utils/poly/src/: Makefile  README  algebraics.cc  algebraics.hh  common.cc  common.hh  domain.cc  domain.hh  dump-smt2.cc  dump-smt2.hh  expr.hh  expr2.cc  expr2.hh  ext-solver.cc  ext-solver.hh  infix.cc  infix.hh  ival-solver.cc  ival-solver.hh  libsmlp.cc  meson.build  nn.cc  nn.hh  poly.cc  poly.hh  prefix.cc  prefix.hh  reals.hh  sexpr.cc  smlp.cc  solver.cc  solver.hh  z3-solver.cc  z3-solver.hh
utils/poly/src/iv/: common.hh  ival.hh  meson.build  response.c  safe.h  safe.hh  table.c
utils/poly/src/nn/: functions.hh  iv-lib.cc  iv.cc  meson.build  nn-common.hh  nn-model.hh  safe.cc
(+836 files in other folders)
