# buildtype:  {plain, debug, debugoptimized, release, minsize, custom}
# debug: {true, false}
# optimization: {plain, 0, g, 1, 2, 3, s}
project('poly', 'cpp', license: 'Apache-2.0', version: '0.2.1',
        default_options: [
	'cpp_std=c++20',
	'warning_level=2',
	'debug=false',
	'optimization=2',
	]
)

subdir('src')
