option('kay-prefix', type: 'string', description:
	'prefix of the include path containing the kay library')

# optional Flint usage instead of gmpxx
option('flint', type: 'feature', description:
	'use the flint library for Z and Q')
option('flint-prefix', type: 'string', description:
	'prefix of the install path containing the flint library')

# optional NN support
option('keras-nn', type: 'feature', description:
	'enable support for reasoning about Keras NNs; pulls in requirements of libraries: hdf5, kjson, iv')

option('hdf5-prefix', type: 'string', description:
	'prefix of the install path containing the hdf5 library and its C++ headers')

option('kjson-prefix', type: 'string', description:
	'prefix of the install path containing the kjson library')

option('iv-prefix', type: 'string', description:
	'prefix of the install path containing the iv library')
